fix overflow

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,6 +17,7 @@ body {
     height: 100%;
     width: 100%;
     cursor: none;
+    overflow: hidden;
 }
 .cursor {
     position: fixed;
